Fixed Image Links

--- a/macro.html
+++ b/macro.html
@@ -40,7 +40,7 @@
                       </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                        <img class="slides" src="./Macro/Leaf 2.jpg" ALT="A dried leaf. "/>
+                        <img class="slides" src="./Macro/Leaf 2.JPG" ALT="A dried leaf. "/>
                                            
                 </div>
                 <div class = "carousel-item">
