--- a/nature.html
+++ b/nature.html
@@ -40,7 +40,7 @@
                       </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                        <img class="slides" src="./Nature/Reed..JPG ALT="A bulrush surrounded by snow. " />
+                        <img class="slides" src="./Nature/Reed.JPG" ALT="A bulrush surrounded by snow." />
                                            
                 </div>
                 <div class = "carousel-item">
@@ -53,7 +53,7 @@
                         <img class="slides" src="./Nature/Tree.JPG" ALT="A small growing tree. " />
                 </div>
                 <div class = "carousel-item">
-                        <img class="slides" src="./Nature/Framing..JPG" ALT="Two small trees, near a field. "/>
+                        <img class="slides" src="./Nature/Framing.JPG" ALT="Two small trees, near a field. "/>
                 </div>
                 <div class = "carousel-item">
                         <img class="slides"  src="./Nature/Fire.JPG" ALT="Long grass on fire. "/>
