--- a/landscapes.html
+++ b/landscapes.html
@@ -53,7 +53,7 @@
                         <img class="slides" src="./Landscapes/Cloud.JPG"ALT="Dark clouds across the sky. " />
                 </div>
                 <div class = "carousel-item">
-                        <img class="slides"  src="./Landscapes/Framing5edit.jpg"ALT="Two trees on a hill. "height="1000px" width="1000px" />
+                        <img class="slides"  src="./Landscapes/Framing5edit.jpg"ALT="Two trees on a hill. " />
             </div>
             </div>
             <a class="carousel-control-prev" href="#image-carousel" role="button" data-slide="prev">
